--- a/styles.css
+++ b/styles.css
@@ -282,7 +282,7 @@ p {
 /* 
     Desktop Only Styling
 */
-@media only screen and (min-width: 640px) and (orientation: portrait) {
+@media only screen and (min-width: 640px) {
 
     .contact-section {
         grid-template-columns: 1fr 1fr;
